@@ -387,6 +387,8 @@ function URLDecode(Data:string):WideString;
 <p>Use an empty value, e.g. <code>[[*=(]]</code>, to reset a parser value to its default value.
 Use <code>[[*]]</code> to reset all parser values to the default values.</p>
 
+<p>Parser values for opening sections may optionally contain <code>$l</code> which will be replaced by the line number in the xxm source file where the section starts.</p>
+
 <p class="title"><a name="projectintf"></a>Optional project interfaces</p>
 
 <dl>
