@@ -1,5 +1,6 @@
 v1.1.8.?
 - optional project interface: IXxmProjectEvents1
+- parser values: $l replaced by source line number
 - xxmHttp: replaced first request parsing ReceiveLn with ReceiveBuf
 
 v1.1.7.292
